--- a/popup.html
+++ b/popup.html
@@ -25,7 +25,7 @@
   <body>
     <div id="container">
       <img src="travis.png">
-      <button id="errorFinder">Find next error</button>
+      <button id="errorFinder">Find next failure</button>
       <button id="toTop">Go to top</button>
     </div>
   </body>
