Add a button for going to error code

--- a/popup.html
+++ b/popup.html
@@ -22,6 +22,7 @@
     <div id="container">
       <button id="errorFinder">Find next failure</button>
       <button id="toTop">Go to top</button>
+      <button id="errorCodeFinder">Go to Error Code</button>
     </div>
   </body>
 </html>
